2006-12-29  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/fvwm.c (SetRCDefaults):
	read default config file after all other defaults

2006-12-29  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/ConfigFvwmMenuDefaults:
	* fvwm/fvwm.c (SetRCDefaults):
	make the hard coded menu bindings load before ConfigFvwmDefaults
	move Mouse 0 ... to ConfigFvwmMenuDefaults

2006-12-28  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/ConfigFvwmMenuDefaults:
	* fvwm/fvwm.c (SetRCDefaults):
	added hard coded default menu bindings

2006-12-29  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* fvwm/fvwm.1.in:
	documentation fixes.

2006-12-28  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/bindings.c:
	* fvwm/menubindings.h:
	* fvwm/menubindings.c:
	* fvwm/menus.h:
	* fvwm/menus.c:
	* fvwm/Makefile.am:
	moved new menu binding code to menubindings.c, menubindings.h
	split binding into a regular list and a fallback list that can not be
	modified

	* libs/fvwmrect.c (fvwmrect_move_into_rectangle):
	fixed calculation of new geometry if x or y is negative

	* fvwm/geometry.c (maximize_adjust_offset):
	fixed calculations of normal geometry when maximized

2006-12-27  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	* fvwm/ConfigFvwmMenuDefaults:
	* fvwm/fvwm.c (SetRCDefaults):
	* fvwm/menus.c (parse_menu_action):
	* fvwm/fvwm.1.in:
	rename menu action to menu bindings and make menu binding commands
	more verbose.  Move "Mouse 0 M A MenuSelectItem" to SetRCDefaults to
	ensure basic function with ConfigFvwmMenuDefaults missing.

2006-12-27  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/menus.c (menuShortcuts):
	fixed compiler warning.

2006-12-27  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/fvwm.1.in:
	corrected mis-spelling

	* AUTHORS:
	* NEWS:
	* fvwm/fvwm.1.in:
	* fvwm/menus.h:
	* fvwm/menus.c (handle_emacs_bindings, parse_menu_action)
	(menuShortcuts, __mloop_handle_event, menu_binding):
	* fvwm/bindings.c (ParseBinding):