@@ -1,5 +1,10 @@
 2006-12-29  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
+	* fvwm/menus.c (enum):
+	(parse_menu_action):
+	(menuShortcuts):
+	renamed enum shortcut_action to menu_shortcut_action
+
 	* fvwm/fvwm.c (SetRCDefaults):
 	read default config file after all other defaults
 
